# XAI-Robustness-Benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_pipeline.ps1
.streamlit/: config.toml
demo_data/: benchmark_results.csv
src/: app.py
src/datasets/: cifar10.py
src/experiments/: aggregate_results.py  run_benchmark.py  run_train.py
src/explainers/: gradcam.py  integrated_gradients.py  utils.py
src/metrics/: decision.py  drift.py  similarity.py
src/models/: build_model.py  train.py
src/shifts/: corruptions.py
src/viz/: plots.py
tests/: create_dummy_ckpt.py  create_dummy_metrics.py
