[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xai_robustness_benchmark"
version = "0.1.0"
authors = [
  { name="Antigravity", email="antigravity@example.com" },
]
description = "A benchmark for measuring explanation stability under distribution shift"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-image",
    "captum",
    "tqdm",
    "pyyaml",
    "scikit-learn",
    "opencv-python-headless",
    "streamlit>=1.20.0",
    "plotly>=5.0.0",
    "seaborn>=0.12.0"
]

[project.urls]
"Homepage" = "https://github.com/example/xai-robustness-benchmark"
